@@ -1,3 +1,7 @@
+2020-10-24  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-tests.el (tramp-test29-start-file-process): Extend test.
+
 2020-10-08  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-tests.el (tramp-test32-shell-command-dont-erase-buffer):
